Add implementation of default background and icons for slides